tests/parsing/smtlib/v2.6/errors/107_reset_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/107_reset_unclosed_1.smt2", line 1, character 7-8:
1 | (reset _)
           ^
Error while parsing a reset command, read the reserved word '_',
      but expected a closing parenthesis.
